<package>
  <name>rss_msgs</name>
  <description>rss_msgs</description>
  <maintainer email="rss-team-6@mit.edu">rss-team-6</maintainer>
  <author email="rss-team-6@mit.edu">rss-team-6</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/rss_msgs</url>
  <version>0.1.0</version>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  <run_depend>rosjava_messages</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


